@@ -3081,15 +3081,26 @@ coot::util::three_letter_to_one_letter(const std::string &resname) {
       }
    }
    
-
    if (! done_locally) { 
-      // This casting should not be required with a modern mmdb. (It isn't).
       Get1LetterCode(resname.c_str(), r);
       n = r[0];
    }
-
    return n;
-} 
+}
+
+std::string
+coot::util::three_letter_to_one_letter_with_specials(const std::string &resname) {
+
+   std::string n;
+   if (resname == "HOH") {
+      n = "~";
+   } else {
+      n = coot::util::three_letter_to_one_letter(resname);
+   } 
+   return n;
+}
+
+
 
 std::pair<clipper::Coord_orth, clipper::Coord_orth>
 coot::util::extents(CMMDBManager *mol) {
